--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class='col-md-8'>
-      <h2>投稿一覧</h2>
+      <h2>投稿一覧 <i class="fa-solid fa-images"></i></h2>
       <div id="index-ajax">
         <%= render 'public/posts/index', posts: @posts, class: "mb-3" %>
       </div>
