--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -10,7 +10,7 @@
     </div>
     <div class='col-md-8'>
       <h2>
-        会員一覧
+        会員一覧 <i class="fa-solid fa-user-check"></i>
         <!--<%#= link_to new_group_path, class: "btn btn-outline-warning ml-5" do %>-->
         <!--  <i class="fa-solid fa-people-group"></i>-->
         <!--<%# end %>-->
