--- a/app/views/public/announcements/_announcement.html.erb
+++ b/app/views/public/announcements/_announcement.html.erb
@@ -11,9 +11,13 @@
           今日の朝活は、<strong><%= announcement.announcement %></strong>です! <br><宣言日:<%= announcement.created_at.strftime('%Y/%m/%d') %>>
         <% end %>
         <% if announcement.achieve_status == "nonachieve" %>
-          <span class="text-danger">(<%= announcement.achieve_status_i18n %>)</span>
+           <%= link_to edit_user_announcement_path(announcement.user, announcement.id) do %>
+            <span class="btn btn-outline-danger"><%= announcement.achieve_status_i18n %></span>
+           <% end %>
         <% else %>
-          <span class="text-success">(<%= announcement.achieve_status_i18n %>済み)</span>
+          <%= link_to edit_user_announcement_path(announcement.user, announcement.id) do %>
+            <span class="btn btn-outline-success"><%= announcement.achieve_status_i18n %>済み</span>
+          <% end %>
         <% end %>
       </li>
     </td>
