--- a/app/views/public/announcements/edit.html.erb
+++ b/app/views/public/announcements/edit.html.erb
@@ -1,13 +1,14 @@
 <div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>朝活宣言編集</h2>
+  <div class='row no-gutters'>
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+    <h2 class="text-center text-dark bg-light p-4 mb-0">朝活宣言編集 <i class="fa-solid fa-sun"></i></h2>
+    <div class="form-body bg-light p-4">
     <%= form_with model: [:public, @user, @announcement], url: user_announcement_path(@announcement.user, @announcement), method: :patch, local: true do |f| %>
     <!--<%#= form_with model: [:public, @user, @announcement], url: user_announcement_path(@announcement.user, @announcement), method: :patch, local: false do |f| %>-->
       <%= render 'layouts/errors', obj: @announcement %>
       <div class="form-group">
-        <%= f.label :announcement, "朝活宣言" %>
-        <%= f.text_field :announcement, class: "form-control" %>
+        <%= f.label :announcement, "朝活宣言" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_field :announcement, placeholder:"朝活をここに", class: "form-control" %>
       </div>
       <div class="form-group">
         <%= f.radio_button :achieve_status, Announcement.achieve_statuses.key(0) %>
@@ -18,7 +19,7 @@
       </div>
 
       <div class="time">
-        <%= f.label :start_time %>
+        <%= f.label :start_time, '開始時間' %>
         <%= f.datetime_select :start_time %>
       </div>
 
@@ -29,6 +30,7 @@
         <% end %>
       </div>
     <% end %>
+    </div>
     </div>
   </div>
 </div>
