--- a/app/views/public/announcements/new.html.erb
+++ b/app/views/public/announcements/new.html.erb
@@ -1,15 +1,16 @@
 <div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>朝活宣言</h2>
+  <div class='row no-gutters'>
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+    <h2 class="text-center text-dark bg-light p-4 mb-0">朝活宣言 <i class="fa-solid fa-sun"></i></h2>
+    <div class="form-body bg-light p-4">
     <%= render 'layouts/errors', obj: @announcement %>
     <!--<%#= form_with model: [:public, @user, @announcement], url: user_announcements_path(@user.id), method: :post, local: false, data: {"turbolinks" => false} do |f| %>-->
     <%= form_with model: [:public, @user, @announcement], url: user_announcements_path(@user.id), method: :post, local: true do |f| %>
       <%#= render 'layouts/errors', obj: @user %>
 
       <div class="form-group">
-        <%= f.label :announcement, "朝活宣言" %>
-        <%= f.text_field :announcement, class: "form-control" %>
+        <%= f.label :announcement, "朝活宣言" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_field :announcement, placeholder:"朝活をここに", autofocus: true, class: "form-control" %>
       </div>
       <div class="form-group">
         <%= f.radio_button :achieve_status, Announcement.achieve_statuses.key(0) %>
@@ -21,14 +22,15 @@
       </div>
 
       <div class="time">
-        <%= f.label :start_time %>
+        <%= f.label :start_time, '開始時間' %>
         <%= f.datetime_select :start_time %>
       </div>
 
       <div class="form-group">
-        <%= f.submit class: 'btn btn-outline-warning' %>
+        <%= f.submit '宣言する', class: 'btn btn-outline-warning' %>
       </div>
     <% end %>
+    </div>
     </div>
   </div>
 </div>
