--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,7 +1,8 @@
 <div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>新規投稿</h2>
+  <div class='row no-gutters'>
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+    <h2 class="text-center text-dark bg-light p-4 mb-0">新規投稿 <i class="fa-solid fa-circle-plus"></i></h2>
+    <div class="form-body bg-light p-4">
     <%= form_with model: @post, url: posts_path, method: :post, local: true do |f| %>
       <%= render 'layouts/errors', obj: @post %>
       <div class="form-group">
@@ -9,23 +10,24 @@
         <%= f.file_field :post_image, class: "form-control-file user_image", accept: 'image/png,image/gif,image/jpeg' %>
       </div>
       <div class="form-group">
-        <%= f.label :title, "投稿タイトル" %>
-        <%= f.text_field :title, class: "form-control" %>
+        <%= f.label :title, "投稿タイトル" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_field :title, placeholder:"タイトルをここに", autofocus: true, class: "form-control" %>
       </div>
       <div class="form-group">
         <!--:genre_nameはpostに紐づいたジャンルモデルのnameという意味?-->
-        <%= f.label :genre_name, "投稿ジャンル(,で複数ジャンル付けできます)" %>
-        <%= f.text_field :genre_name, class: 'form-control book_tag_name' %>
+        <%= f.label :genre_name, "投稿ジャンル(,で複数ジャンル付けできます)" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_field :genre_name, placeholder:"ジャンルをここに", class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.label :body, "投稿本文" %>
-        <%= f.text_area :body, class: "form-control" %>
+        <%= f.label :body, "投稿本文" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_area :body, placeholder: "投稿本文をここに", class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= f.submit class: 'btn btn-outline-warning' %>
+        <%= f.submit '投稿する', class: 'btn btn-outline-warning' %>
       </div>
     <% end %>
+    </div>
     </div>
   </div>
 </div>
