--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,7 +1,8 @@
 <div class='container'>
-  <div class='row'>
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2>プロフィール編集</h2>
+  <div class='row no-gutters'>
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+    <h2 class="text-center text-dark bg-light p-4 mb-0">プロフィール編集 <i class="fa-solid fa-user-pen"></i></h2>
+    <div class="form-body bg-light p-4">
     <%= render 'layouts/errors', obj: @user %>
     <%= form_with model: [:public, @user], url: user_path(@user.id), method: :patch, local: true do |f| %>
       <div class="form-group">
@@ -9,21 +10,22 @@
         <%= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/png,image/gif,image/jpeg' %>
       </div>
       <div class="form-group">
-        <%= f.label :name, "名前" %>
-        <%= f.text_field :name, class: "form-control name" %>
+        <%= f.label :name, "名前" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_field :name, placeholder:"名前をここに", class: "form-control name" %>
       </div>
       <div class="form-group">
-        <%= f.label :introduction, "自己紹介文" %>
-        <%= f.text_area :introduction, class: "form-control introduction" %>
+        <%= f.label :introduction, "自己紹介文" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_area :introduction, placeholder:"自己紹介をここに", class: "form-control introduction" %>
       </div>
       <div class="form-group">
-        <%= f.label :hobby, "趣味" %>
-        <%= f.text_field :hobby, class: "form-control hobby" %>
+        <%= f.label :hobby, "趣味" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_field :hobby, placeholder:"趣味をここに", class: "form-control hobby" %>
       </div>
       <div class="form-group">
         <%= f.submit class: 'btn btn-outline-warning' %>
       </div>
     <% end %>
+    </div>
     </div>
   </div>
 </div>
