--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,8 @@
 
 .image1 {
   background-image: image-url("image1.jpg");
+  background-size: cover;
+  background-position: center;
 }
 .image2 {
   background-image: image-url("image2.jpg");
