[Add]top_images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,21 +42,29 @@
 }
 
 .image1 {
-  background-image: image-url("image1.jpg");
+  background-image: image-url("asahi.jpg");
   background-size: cover;
   background-position: center;
 }
 .image2 {
-  background-image: image-url("image2.jpg");
+  background-image: image-url("tobi.jpg");
+  background-size: cover;
+  background-position: center;
 }
 .image3 {
-  background-image: image-url("image3.jpg");
+  background-image: image-url("cup.jpg");
+  background-size: cover;
+  background-position: center;
 }
 .image4 {
-  background-image: image-url("image4.jpg");
+  background-image: image-url("book.jpeg");
+  background-size: cover;
+  background-position: center;
 }
 .image5 {
-  background-image: image-url("image5.jpg");
+  background-image: image-url("bridge.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 #container{
