--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,7 +62,7 @@
   background-position: center;
 }
 .image5 {
-  background-image: image-url("bridge.jpg");
+  background-image: image-url("bird.jpg");
   background-size: cover;
   background-position: center;
 }
