--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -12,24 +12,25 @@
 
     <div class="image1 carousel-item active">
       <div class="carousel-caption d-none d-md-block">
-        <h1>さあ、朝活を始めようか。</h1>
+        <h1>朝活サポへようこそ</h1>
         <h3>〜朝活で日本を元気に〜</h3>
       </div>
     </div>
 
     <div class="image2 carousel-item">
       <div class="carousel-caption d-none d-md-block">
-        <h1>何ができるの?</h1>
+        <h1>何ができるのか</h1>
         <h3>朝活仲間と共に、朝活を継続できるようになります。</h3>
       </div>
     </div>
 
     <div class="image3 carousel-item">
       <div class="carousel-caption d-none d-md-block">
-        <h1>どうやってやるの?</h1>
-        <h3>朝活コミュニティ</h3><br>
-        <h3>朝活宣言</h3><br>
+        <h1>どうやってやるのか</h1>
+        <h3>朝活コミュニティ</h3>
+        <h3>朝活宣言</h3>
         <h3>朝活投稿</h3>
+        <h3>朝活開催</h3>
       </div>
     </div>
 
