--- a/app/views/public/posts/_index.html.erb
+++ b/app/views/public/posts/_index.html.erb
@@ -16,7 +16,7 @@
       <div class="card-body">
         <h4 class="card-title">
           <%= link_to post_path(post.id), class: "text-dark" do %>
-            <strong><i class="far fa-flag"></i><span> <%= post.title %></span></strong>
+            <strong><i class="fa-solid fa-feather"></i><span> <%= post.title %></span></strong>
           <% end %>
         </h4>
         <h6 id="post_<%= post.id %>"><%= post.created_at.strftime('%Y/%m/%d') %>
