--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,37 +1,46 @@
 <div class='container'>
   <div class='row'>
-    <div class='col-md-8 offset-md-1'>
-  		<h2>投稿詳細</h2>
-      <table class='table table-borderless'>
-  		  <tr>
-          <td>
-            <%= link_to user_path(@user.id) do %>
-              <%= image_tag @post.user.get_profile_image(50, 50) %>
-              <%= link_to @post.user.name, user_path(@user.id) %>
-            <% end %>
-          </td>
-        </tr>
-      </table>
-
-      <div class="card shadow-lg" style="max-width: 75rem;">
-        <%= image_tag @post.get_post_image(900, 900), class: "card-image-top" %>
-        <div class="card-body">
-          <h4 class="card-title">
-            <%= @post.title %>
-          </h4>
-          <h5 id="post_<%= @post.id %>"><%= @post.created_at.strftime('%Y/%m/%d') %>  <span class="comments-count">コメント数:<%= @post.post_comments.count %></span>  <span class="favorite-btn"><%= render "public/favorites/btn", post: @post %></span></h5>
-          <p class="card-text"><%= @post.body %></p>
-          <% if @post.user == current_user %>
-            <%= link_to "削除する", post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
-          <% end %>
+    <div class='col-md-12'>
+        <div class="card-list-container py-5">
+          <h2 class="text-center">投稿詳細ページ <i class="fa-solid fa-image"></i></h2>
+            <div class="card w-50 mx-auto mt-4 shadow-lg">
+            <%= image_tag @post.get_post_image(900, 900), class: "card-image-top" %>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-3">
+                  <%= link_to user_path(@user.id) do %>
+                    <%= image_tag @post.user.get_profile_image(100, 100), class:"mt-3 rounded-circle"; %>
+                    <%#= link_to @post.user.name, user_path(@user.id) %>
+                  <% end %>
+                </div>
+                <div class="col-9">
+                  <p class="card-title">
+                    <strong><i class="fa-solid fa-feather"></i><span>  <%= @post.title %></span></strong>
+                  </p>
+                  <h5 id="post_<%= @post.id %>"><%= @post.created_at.strftime('%Y/%m/%d') %>  <span class="comments-count">コメント数:<%= @post.post_comments.count %></span>  <span class="favorite-btn"><%= render "public/favorites/btn", post: @post %></span></h5>
+                  <p class="card-text"><%= @post.body %></p>
+                  <% if @post.user == current_user %>
+                    <%= link_to "削除する", post_path(@post.id), method: :delete, class: "btn btn-outline-danger" %>
+                  <% end %>
+                  <span>
+                    <i class="fas fa-user"></i> By <%= link_to @post.user.name, user_path(@user.id) %>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="card-footer">
+              <span><strong>投稿ジャンル: </strong></span>
+              <% @post.genres.each do |genre| %>
+                <span><%= genre.name %> </span>
+                <!--<li style="list-style: none;"><%#= genre.name %></li>-->
+              <% end %>
+            </div>
+          </div>
         </div>
-        <div class="card-footer">
-          <h4>投稿ジャンル</h4>
-          <% @post.genres.each do |genre| %>
-            <li style="list-style: none;"><%= genre.name %></li>
-          <% end %>
-        </div>
-      </div>
+     </div>
+  </div>
+  <div class="row row d-flex align-items-center justify-content-center">
+    <div class="col-md-8">
       <div class="post_comments">
         <%= render "public/post_comments/index", post: @post %>
       </div>
@@ -39,3 +48,9 @@
     </div>
   </div>
 </div>
+
+<style>
+  .fa-image {
+    color: #FFD700;
+  }
+</style>
