--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -1,31 +1,71 @@
-<div class='container mb-5'>
+<div class='container'>
   <div class='row'>
-    <div class='col-md-8 offset-md-1'>
-  		<h2>コミュニティ詳細</h2>
-      <div class="card shadow-lg", style="max-width: 50rem;", id="group_<%= @group.id %>">
-        <%= image_tag @group.get_image(900, 900), class: "card-image-top" %>
-        <div class="card-body">
-          <h4 class="card-title"><%= @group.name %></h4>
-          <p class="card-text"><%= @group.introduction %></p>
-          <% if @group.owner_id == current_user.id %>
-            <%= link_to "編集", edit_group_path(@group.id), class: "btn btn-outline-success" %>
-            <!--ここにメール作成ボタンも追加-->
-            <%= link_to '朝活を開催', group_new_mail_path(@group), class: "btn btn-outline-warning" %>
-          <% end %>
-          <div class="join-btn">
-            <%= render 'join_btn', group: @group %>
+    <div class='col-md-12'>
+        <div class="card-list-container py-5">
+          <h2 class="text-center">コミュニティ詳細ページ <i class="fa-solid fa-image"></i></h2>
+            <div class="card w-50 mx-auto mt-4 shadow-lg" id="group_<%= @group.id %>">
+              <%= image_tag @group.get_image(900, 900), class: "card-image-top" %>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-3">
+                  <%# @owner = @group.users.where(id: @group.owner_id) %>
+                  <%#= link_to user_path(@user) do %>
+                    <%#= image_tag @user.get_profile_image(100, 100), class:"mt-3 rounded-circle"; %>
+                    <%#= link_to @post.user.name, user_path(@user.id) %>
+                  <%# end %>
+                </div>
+                <div class="col-9">
+                  <p class="card-title">
+                    <strong><i class="fa-solid fa-feather"></i><span>コミュニティ名: <%= @group.name %></span></strong>
+                  </p>
+                  <p class="card-text"><%= @group.introduction %></p>
+                  <% if @group.owner_id == current_user.id %>
+                    <%= link_to "編集", edit_group_path(@group.id), class: "btn btn-outline-success" %>
+                    <!--ここにメール作成ボタンも追加-->
+                    <%= link_to '朝活を開催', group_new_mail_path(@group), class: "btn btn-outline-warning" %>
+                  <% end %>
+                  <div class="join-btn">
+                    <%= render 'join_btn', group: @group %>
+                  </div>
+                  <ul class="list-group list-group-flush group-member">
+                    <%= render 'member', group: @group %>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        <ul class="list-group list-group-flush group-member">
-          <%= render 'member', group: @group %>
-        </ul>
-        <!--<div class="card-body join-btn">-->
-        <!--  <%#= render 'join_btn', group: @group %>-->
-        <!--  <%# if @group.owner_id == current_user.id %>-->
-        <!--    <%#= link_to '朝活を開催', group_new_mail_path(@group) %>-->
-        <!--  <%# end %>-->
-        <!--</div>-->
-      </div>
-    </div>
+     </div>
   </div>
 </div>
+
+
+
+
+<!--<div class='container mb-5'>-->
+<!--  <div class='row'>-->
+<!--    <div class='col-md-8 offset-md-1'>-->
+<!--  		<h2>コミュニティ詳細</h2>-->
+<!--      <div class="card shadow-lg", style="max-width: 50rem;", id="group_<%#= @group.id %>">-->
+<!--        <%#= image_tag @group.get_image(900, 900), class: "card-image-top" %>-->
+<!--        <div class="card-body">-->
+<!--          <h4 class="card-title"><%#= @group.name %></h4>-->
+<!--          <p class="card-text"><%#= @group.introduction %></p>-->
+<!--          <%# if @group.owner_id == current_user.id %>-->
+<!--            <%#= link_to "編集", edit_group_path(@group.id), class: "btn btn-outline-success" %>-->
+<!--            ここにメール作成ボタンも追加-->
+<!--            <%#= link_to '朝活を開催', group_new_mail_path(@group), class: "btn btn-outline-warning" %>-->
+<!--          <%# end %>-->
+<!--          <div class="join-btn">-->
+<!--            <%#= render 'join_btn', group: @group %>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <ul class="list-group list-group-flush group-member">-->
+<!--          <%#= render 'member', group: @group %>-->
+<!--        </ul>-->
+<!--        <div class="card-body join-btn">-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
