--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -39,7 +39,7 @@
         <div class='row d-flex align-items-center justify-content-center'>
           <div class='col-md-12'>
             <h2 class="text-warning">新着コミュニティ(3件)</h2>
-              <%= render 'public/homes/top_groups', groups: @groups %>
+              <%#= render 'public/homes/top_groups', groups: @groups %>
           </div>
         </div>
       </div>
