--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -7,7 +7,8 @@
     <%= form_with model: [:public, @user], url: user_path(@user.id), method: :patch, local: true do |f| %>
       <div class="form-group">
         <%= f.label :profile_image, "プロフィール画像" %>
-        <%= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/png,image/gif,image/jpeg' %>
+        <%#= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/png,image/gif,image/jpeg' %>
+        <%= f.file_field :profile_image, class: "form-control-file user_image", accept: 'image/jpg' %>
       </div>
       <div class="form-group">
         <%= f.label :name, "名前" %> <i class="fa-solid fa-pen-clip"></i>
