--- a/app/views/public/groups/_form.html.erb
+++ b/app/views/public/groups/_form.html.erb
@@ -11,8 +11,8 @@
 
   <div class="form-group">
     <%= f.label :コミュニティ画像 %>
-    <%#= f.file_field :image, class: 'form-control-file', accept: 'image/png,image/gif,image/jpeg' %>
-    <%= f.file_field :image, class: 'form-control-file', accept: 'image/jpg' %>
+    <%= f.file_field :image, class: 'form-control-file', accept: 'image/png,image/gif,image/jpeg' %>
+    <%#= f.file_field :image, class: 'form-control-file', accept: 'image/jpg' %>
   </div>
 
   <div class="form-group">
