--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -7,8 +7,8 @@
       <%= render 'layouts/errors', obj: @post %>
       <div class="form-group">
         <%= f.label :post_image, "投稿写真" %>
-        <%= f.file_field :post_image, class: "form-control-file user_image", accept: 'image/jpg' %>
-        <%#= f.file_field :post_image, class: "form-control-file user_image", accept: 'image/png,image/gif,image/jpeg' %>
+        <%#= f.file_field :post_image, class: "form-control-file user_image", accept: 'image/jpg' %>
+        <%= f.file_field :post_image, class: "form-control-file user_image", accept: 'image/png,image/gif,image/jpeg' %>
       </div>
       <div class="form-group">
         <%= f.label :title, "投稿タイトル" %> <i class="fa-solid fa-pen-clip"></i>
