--- a/app/views/admin/posts/_index.html.erb
+++ b/app/views/admin/posts/_index.html.erb
@@ -4,10 +4,9 @@
       <th></th>
       <th>タイトル</th>
       <th>本文</th>
-      <th>公開ステータス</th>
       <th>投稿日時</th>
       <th></th>
-      <th colspan="6"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
@@ -21,10 +20,7 @@
           <%= link_to post.title, admin_post_path(post.id) %>
         </td>
         <td>
-          <%= post.body %>
-        </td>
-        <td>
-
+          <%= post.body.truncate(10) %>
         </td>
         <td>
           <%= post.created_at.strftime('%Y/%m/%d') %>
