[Add]top_images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,27 +42,27 @@
 }
 
 .image1 {
-  background-image: image-url("asahi.jpg");
+  background-image: image-url("asahi3.jpg");
   background-size: cover;
   background-position: center;
 }
 .image2 {
-  background-image: image-url("tobi.jpg");
+  background-image: image-url("tobi2.jpg");
   background-size: cover;
   background-position: center;
 }
 .image3 {
-  background-image: image-url("cup.jpg");
+  background-image: image-url("cup2.jpg");
   background-size: cover;
   background-position: center;
 }
 .image4 {
-  background-image: image-url("book.jpeg");
+  background-image: image-url("book2.jpeg");
   background-size: cover;
   background-position: center;
 }
 .image5 {
-  background-image: image-url("bird.jpg");
+  background-image: image-url("bird2.jpg");
   background-size: cover;
   background-position: center;
 }
