--- a/app/views/public/users/_index.html.erb
+++ b/app/views/public/users/_index.html.erb
@@ -2,9 +2,9 @@
   <thead>
     <tr>
       <th></th>
-      <th>名前</th>
-      <th>自己紹介文</th>
-      <th>趣味</th>
+      <th class="text-center">名前</th>
+      <th class="text-center">意気込み</th>
+      <th class="text-center">趣味</th>
       <th></th></th>
       <th colspan="5"></th>
     </tr>
