--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -1,19 +1,16 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-4'>
-      <h2><%= @user.name %>さんの<br>会員情報</h2>
+      <!--<h2><%#= @user.name %>さんの<br>会員情報</h2>-->
       <%= render 'public/users/info', user: @user %>
-      <h2 class="mt-3"><%= @user.name %>さんの<br>参加中コミュニティ</h2>
+      <h5 class="mt-3 text-center"><%= @user.name %>さんの<br>参加中コミュニティ</h5>
       <div id="paginate-groups">
         <%= render 'public/users/user_groups', user_groups: @user_groups %>
       </div>
     </div>
     <div class='col-md-8'>
-      <h2>
+      <h2 class="text-center">
         コミュニティ一覧 <i class="fa-solid fa-people-group"></i>
-        <!--<%#= link_to new_group_path, class: "btn btn-outline-warning ml-5" do %>-->
-        <!--  <i class="fa-solid fa-people-group"></i>-->
-        <!--<%# end %>-->
       </h2>
       <%= render 'index', groups: @groups %>
     </div>
