--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,28 +1,14 @@
-<!--<div class="text-right mr-5">-->
-<!--  <%#= link_to new_post_path, class: 'btn btn-outline-warning' do %>-->
-<!--    <i class="fa-solid fa-pen-to-square"></i>-->
-<!--  <%# end %>-->
-<!--  <%#= link_to "いいねした投稿", favorites_user_path(@user) %>-->
-<!--</div>-->
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-4'>
-      <h2><%= @user.name %>さんの<br>会員情報</h2>
+      <!--<h4 class="text-center title-color"><%#= @user.name %>さんの<br>プロフィール</h4>-->
       <%= render 'info', user: @user %>
-      <h2 class="mt-3"><%= @user.name %>さんの<br>参加中コミュニティ</h2>
+      <h5 class="mt-3 text-center"><%= @user.name %>さんの<br>参加中コミュニティ</h5>
       <div id="paginate-user">
         <%= render 'user_groups', user_groups: @user_groups %>
       </div>
     </div>
     <div class='col-md-8'>
-      <!--<div class="border rounded-circle p-2 text-center">-->
-      <!--  <br><h5 class="text-center"><nobr><%#= render 'public/announcements/announcement', announcements: @announcements_latest1 %></nobr></h5>-->
-      <!--  <div class="text-center">-->
-      <!--    <%# if @user.id == current_user.id %>-->
-      <!--      <%#= link_to '宣言する!', new_user_announcement_path(@user.id), class: 'btn btn-outline-warning' %>-->
-      <!--    <%# end %>-->
-      <!--  </div>-->
-      <!--</div>-->
 
       <div class="wrap mt-3 mb-5">
         <ul id="tab-menu">
@@ -51,8 +37,6 @@
         </div>
       </div>
 
-      <!--<h2><%#= @user.name %>さんの投稿</h2>-->
-      <!--<%#= render 'public/posts/index',posts: @posts %>-->
     </div>
   </div>
 </div>
