--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -78,7 +78,7 @@
         <i class="fa-solid fa-heart-circle-check" aria-hidden="true" style="color: red;"></i>
       <% end %>
     </span>
-    <p class="arrow_box"><%= user.name %>さんが<br>いいねした投稿</p>
+    <p class="arrow_box"><%= user.name %>さんの<br>ブックマーク</p>
   </span>
 </div>
 <!--</div>-->
