--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,9 +1,9 @@
 <div class='container px-5 px-sm-0'>
   <div class='row'>
     <div class='col-md-4'>
-      <h2><%= @user.name %>さんの会員情報</h2>
+      <!--<h2><%#= @user.name %>さんの会員情報</h2>-->
       <%= render 'info', user: @user %>
-      <h2 class="mt-3"><%= @user.name %>さんの</br>参加中コミュニティ</h2>
+      <h5 class="mt-3 text-center"><%= @user.name %>さんの</br>参加中コミュニティ</h5>
       <div id="paginate-favorites">
         <%= render 'user_groups', user_groups: @user_groups %>
       </div>
@@ -17,7 +17,7 @@
       <!--    <%# end %>-->
       <!--  </div>-->
       <!--</div>-->
-      <h2><%= @user.name %>さんがいいねした投稿</h2>
+      <h2 class="text-center"><%= @user.name %>さんのブックマーク <i class="fa-solid fa-heart-circle-check" aria-hidden="true"></i></h2>
       <div id="favorite-posts">
         <%= render 'public/users/favorite_posts', posts: @favorite_posts %>
       </div>
