--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -15,8 +15,8 @@
         <%= f.text_field :name, placeholder:"名前をここに", class: "form-control name" %>
       </div>
       <div class="form-group">
-        <%= f.label :introduction, "自己紹介文" %> <i class="fa-solid fa-pen-clip"></i>
-        <%= f.text_area :introduction, placeholder:"自己紹介をここに", class: "form-control introduction" %>
+        <%= f.label :introduction, "意気込み" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.text_area :introduction, placeholder:"意気込みをここに(13文字以内)", class: "form-control introduction" %>
       </div>
       <div class="form-group">
         <%= f.label :hobby, "趣味" %> <i class="fa-solid fa-pen-clip"></i>
