[Add]notification layout

--- a/app/views/public/notifications/index.html.erb
+++ b/app/views/public/notifications/index.html.erb
@@ -8,3 +8,18 @@
   <% else %>
     <p>通知はありません</p>
   <% end %>
+
+<style>
+  .pagination {
+    text-align: center;
+    width: 100%;
+    margin: 20px auto;
+    max-width: 200px;
+  }
+  .page-item.active .page-link {
+    z-index: 3;
+    color: #000;
+    background-color: #FFFF66;
+    border-color: #FFFF00;
+  }
+</style>
