--- a/app/views/public/searches/_genre_form.html.erb
+++ b/app/views/public/searches/_genre_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_with url: search_path, method: :get, local: true do |f| %>
     <%= f.text_field :content %>
     <%= f.hidden_field :model, :value => "genre" %>
-    <%= f.hidden_field :method, :value => "perfect" %>
-    <%= f.submit '投稿ジャンル検索' %>
+    <%= f.hidden_field :method, :value => "partial" %>
+    <%= f.submit '投稿ジャンル検索', class: "btn btn-sm btn-outline-warning" %>
   <% end %>
 <% end %>
