--- a/app/views/public/users/_index.html.erb
+++ b/app/views/public/users/_index.html.erb
@@ -13,22 +13,22 @@
   <tbody>
     <% users.each do |user| %>
       <tr>
-        <td>
+        <td class="text-center">
           <%= image_tag user.get_profile_image(50, 50), class:"rounded-circle"; %>
         </td>
-        <td>
+        <td class="text-center">
           <%= user.name %>
         </td>
-        <td>
+        <td class="text-center">
           <%= user.introduction %>
         </td>
-        <td>
+        <td class="text-center">
           <%= user.hobby %>
         </td>
-        <td>
+        <td class="text-center">
           <%= render "public/relationships/btn", user: user %>
         </td>
-        <td>
+        <td class="text-center">
           <%= link_to "Show", user_path(user.id), class: 'btn btn-outline-warning' %>
         </td>
       </tr>
