--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -1,31 +1,86 @@
-<table class='table table-borderless'>
-  <thead>
-    <tr>
-      <th></th>
-      <th class="text-center">コミュニティ名</th>
-      <th class="text-center">参加中メンバー</th>
-      <th></th>
-      <th></th>
-      <th colspan="5"></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% groups.each do |group| %>
-      <tr>
-        <td><%= image_tag group.get_image(50, 50), class:"rounded-circle"; %></td>
-        <td class="text-center"><%= link_to group.name, group_path(group.id) %></td>
-        <td class="text-center"><%= group.group_users.count %>人</td>
-        <td>
-            <%= link_to 'Show', group_path(group.id), class: 'btn btn-outline-warning' %>
-        </td>
-        <td>
-          <% if group.owner_id == current_user.id %>
-            <%= link_to '編集', edit_group_path(group.id), class: 'btn btn-outline-success' %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<!--<table class='table table-borderless'>-->
+<!--  <thead>-->
+<!--    <tr>-->
+<!--      <th></th>-->
+<!--      <th class="text-center">コミュニティ名</th>-->
+<!--      <th class="text-center">参加中メンバー</th>-->
+<!--      <th></th>-->
+<!--      <th></th>-->
+<!--      <th colspan="5"></th>-->
+<!--    </tr>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--    <%# groups.each do |group| %>-->
+<!--      <tr>-->
+<!--        <td><%#= image_tag group.get_image(50, 50), class:"rounded-circle"; %></td>-->
+<!--        <td class="text-center"><%#= link_to group.name, group_path(group.id) %></td>-->
+<!--        <td class="text-center"><%#= group.group_users.count %>人</td>-->
+<!--        <td>-->
+<!--            <%#= link_to 'Show', group_path(group.id), class: 'btn btn-outline-warning' %>-->
+<!--        </td>-->
+<!--        <td>-->
+<!--          <%# if group.owner_id == current_user.id %>-->
+<!--            <%#= link_to '編集', edit_group_path(group.id), class: 'btn btn-outline-success' %>-->
+<!--          <%# end %>-->
+<!--        </td>-->
+<!--      </tr>-->
+<!--    <%# end %>-->
+<!--  </tbody>-->
+<!--</table>-->
 
-<%= paginate groups, :param_name => 'groups_page' %>
+
+<div class="card-deck">
+  <!--countの初期値0-->
+  <% count = 0 %>
+  <!--each_with_indexで、0.1.2...とcardを繰り返す-->
+  <% groups.each_with_index do |group, index| %>
+  <% @owner = User.find(group.owner_id) %>
+   <%# unless post.user.is_deleted %>
+    <!--<div class="card w-200 mx-auto mt-4 h-500 shadow-lg">-->
+    <div class="card mt-1 mr-2 ml-1 px-0 shadow-lg col-4">
+      <%= image_tag group.get_image(300, 300), class: "card-image-top h-50" %>
+      <div class="card-body">
+        <h4 class="card-title">
+          <%= link_to group_path(group.id), class: "text-dark" do %>
+            <strong><i class="fa-solid fa-people-group"></i><span> <%= group.name %></span></strong>
+          <% end %>
+        </h4>
+        <!--<h6 id="post_<%#= post.id %>"><%#= post.created_at.strftime('%Y/%m/%d') %>-->
+        <!--  <br><span class="comments-count">コメント数:<#%= post.post_comments.count %></span>-->
+        <!--  <br><span class="favorite-btn"><%#= render "public/favorites/btn", post: post %></span>-->
+        <!--</h6>-->
+        <p class="card-text">
+          説明:<%= group.introduction.truncate(10) %>
+          <br>メンバー: <%= group.group_users.count %>人
+        </p>
+        <span>
+          <% if !@owner.is_deleted %>
+            <i class="fas fa-user"></i> 作成者: <%= image_tag @owner.get_profile_image(30,30), class:"rounded-circle"; %><%= @owner.name %>
+          <% else %>
+            <p>作成者: <%= image_tag 'no_image.jpg', :size => '30x30' %>退会済みユーザ</p>
+          <% end %>
+        </span>
+      </div>
+    </div>
+    <!--count = 投稿 + 1(投稿数1の場合は、index = 0)-->
+   <% count = index + 1 %>
+   <%# end %>
+  <% end %>
+  <!--例えば投稿数1の場合は、count = 1になる。countが3でないとき(true)は、?の(3-(count%3))をする。countが3の時(false)は、0を返す。-->
+  <!--(3-(count%3))は、例えばcount = 1の時は、3-(1 % 3)。(1 % 3)は、０余り1と言う意味。よって(3-(count%3))は3-1なので、2を返す。-->
+  <!--countが7(投稿数が7)でも、count % 3は、余りを返すので、count % 3は1-->
+  <!--↓三項演算子-->
+  <% col = count != 3 ? (3-(count%3)) : 0 %>
+  <!--上記の結果の場合、for文で1から2までを繰り返し、その文col-4のdivタグを挿入する-->
+  <% for num in 1..col %>
+    <div class="col-4"></div>
+  <% end %>
+</div>
+
+<%= paginate groups, :param_name => 'groups_page', remote: true %>
+
+<style>
+  .card {
+    border-radius: 27px;
+  }
+</style>
