--- a/app/views/public/homes/_top_groups.html.erb
+++ b/app/views/public/homes/_top_groups.html.erb
@@ -1,12 +1,13 @@
 <div class="card-deck mt-5">
   <% count = 0 %>
   <% groups.each_with_index do |group, index| %>
+  <% @owner = User.find(group.owner_id) %>
     <div class="card px-0 shadow-lg col-4">
       <%= image_tag group.get_image(200, 200), class: "card-image-top h-50" %>
       <div class="card-body">
         <h4 class="card-title">
           <%= link_to new_user_registration_path, class: "text-dark" do %>
-            <strong><i class="far fa-flag"></i><span> <%= group.name %></span></strong>
+            <strong><i class="fa-solid fa-people-group"></i></i><span> <%= group.name %></span></strong>
           <% end %>
         </h4>
          <p class="card-text">メンバー数: <%= group.group_users.count %>
@@ -14,9 +15,22 @@
           <!--<br><span class="favorite-btn"><%#= render "public/favorites/btn", post: post %></span>-->
         </p>
         <p class="card-text">説明:<%= group.introduction.truncate(10) %></p>
+        <span>
+          <% if !@owner.is_deleted %>
+            <i class="fas fa-user"></i> 作成者: <%= image_tag @owner.get_profile_image(30,30), class:"rounded-circle"; %><%= @owner.name %>
+          <% else %>
+            <p>作成者: <%= image_tag 'no_image.jpg', :size => '30x30' %>退会済みユーザ</p>
+          <% end %>
+        </span>
         <!--<span><i class="fas fa-user"></i> By<%#= image_tag group.user.get_profile_image(30,30), class:"rounded-circle"; %><%#= post.user.name %></span>-->
       </div>
     </div>
     <% count = index + 1 %>
   <% end %>
 </div>
+
+<style>
+  .card {
+    border-radius: 27px;
+  }
+</style>
