--- a/app/views/public/groups/_index.html.erb
+++ b/app/views/public/groups/_index.html.erb
@@ -80,6 +80,18 @@
 <%= paginate groups, :param_name => 'groups_page', remote: true %>
 
 <style>
+  .pagination {
+    text-align: center;
+    width: 100%;
+    margin: 20px auto;
+    max-width: 200px;
+  }
+  .page-item.active .page-link {
+    z-index: 3;
+    color: #000;
+    background-color: #FFFF66;
+    border-color: #FFFF00;
+  }
   .card {
     border-radius: 27px;
   }
