--- a/app/views/public/users/_index.html.erb
+++ b/app/views/public/users/_index.html.erb
@@ -37,3 +37,18 @@
 
 </table>
 <%= paginate users, :param_name => 'users_page' %>
+
+<style>
+  .pagination {
+    text-align: center;
+    width: 100%;
+    margin: 20px auto;
+    max-width: 200px;
+  }
+  .page-item.active .page-link {
+    z-index: 3;
+    color: #000;
+    background-color: #FFFF66;
+    border-color: #FFFF00;
+  }
+</style>
