--- a/app/views/public/users/_favorite_posts.html.erb
+++ b/app/views/public/users/_favorite_posts.html.erb
@@ -27,3 +27,17 @@
   <% end %>
 </div>
 <%= paginate posts, :param_name => 'favorite_posts_page', remote: true %>
+<style>
+  .pagination {
+    text-align: center;
+    width: 100%;
+    margin: 20px auto;
+    max-width: 200px;
+  }
+  .page-item.active .page-link {
+    z-index: 3;
+    color: #000;
+    background-color: #FFFF66;
+    border-color: #FFFF00;
+  }
+</style>
