--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <% @path = request.fullpath %>
     <% if user_signed_in? && @path != "/" %>
       <div class="container">
-        <div class="row justify-content-start mb-2">
+        <div class="row justify-content-start mt-1 mb-2">
           <%= render 'public/searches/form' %>
           <!--<%#= render 'public/searches/genre_form' %>-->
         </div>
