--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -3,10 +3,11 @@
     <div class='col-md-4'>
       <!--<h2><%#= @user.name %>さんの<br>会員情報</h2>-->
       <%= render 'public/users/info', user: @user %>
-      <h5 class="mt-3 text-center"><%= @user.name %>さんの<br>参加中コミュニティ</h5>
-      <div id="paginate-groups">
-        <%= render 'public/users/user_groups', user_groups: @user_groups %>
-      </div>
+      <!--<input type="checkbox" id="F">-->
+      <!--<label class="F" for="F"><h5 class="mt-3 text-center color"><%#= @user.name %>さんの<br>参加中コミュニティ <i class="fa-solid fa-chevron-down"></i></h5></label>-->
+      <!--<div id="paginate-groups" class="G">-->
+      <!--  <%#= render 'public/users/user_groups', user_groups: @user_groups %>-->
+      <!--</div>-->
     </div>
     <div class='col-md-8'>
       <h2 class="text-center">
@@ -18,3 +19,35 @@
     </div>
   </div>
 </div>
+
+<!--<style>-->
+<!--  #F{-->
+<!--      display: none;-->
+<!--  }-->
+<!--  .F{-->
+<!--      cursor: pointer;-->
+<!--  }-->
+<!--  .G{-->
+<!--      display: none;-->
+<!--      height: 350px;-->
+<!--  }-->
+<!--  #F:checked+label+.G{-->
+<!--      display: block;-->
+<!--  }-->
+
+<!--  .color {-->
+<!--    background-color: #FFFFFF;-->
+<!--    -webkit-transition: all 0.3s ease;-->
+<!--    -moz-transition: all 0.3s ease;-->
+<!--    -o-transition: all 0.3s ease;-->
+<!--    transition: all  0.3s ease;-->
+<!--  }-->
+
+<!--  .color:hover {-->
+<!--    background-color: #FFFF66;-->
+<!--  }-->
+
+<!--  label {-->
+<!--    display: block;-->
+<!--  }-->
+<!--</style>-->
