--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -3,11 +3,14 @@
     <div class='col-md-4'>
       <!--<h2><%#= @user.name %>さんの会員情報</h2>-->
       <%= render 'info', user: @user %>
-      <h5 class="mt-3 text-center"><%= @user.name %>さんの</br>参加中コミュニティ</h5>
-      <div id="paginate-favorites">
-        <%= render 'user_groups', user_groups: @user_groups %>
-      </div>
+
+      <!--<input type="checkbox" id="F">-->
+      <!--<label class="F" for="F"><h5 class="mt-3 text-center color"><%#= @user.name %>さんの</br>参加中コミュニティ <i class="fa-solid fa-chevron-down"></i></h5></label>-->
+      <!--<div id="paginate-favorites" class="G">-->
+      <!--  <%#= render 'user_groups', user_groups: @user_groups %>-->
+      <!--</div>-->
     </div>
+
     <div class='col-md-8'>
       <!--<div class="border rounded-circle p-2 text-center">-->
       <!--  私は今日、<%#= render 'public/announcements/announcement', announcements: @announcements %>朝活をします!-->
@@ -24,3 +27,35 @@
     </div>
   </div>
 </div>
+
+<!--<style>-->
+<!--  #F{-->
+<!--      display: none;-->
+<!--  }-->
+<!--  .F{-->
+<!--      cursor: pointer;-->
+<!--  }-->
+<!--  .G{-->
+<!--      display: none;-->
+<!--      height: 350px;-->
+<!--  }-->
+<!--  #F:checked+label+.G{-->
+<!--      display: block;-->
+<!--  }-->
+
+<!--  .color {-->
+<!--    background-color: #FFFFFF;-->
+<!--    -webkit-transition: all 0.3s ease;-->
+<!--    -moz-transition: all 0.3s ease;-->
+<!--    -o-transition: all 0.3s ease;-->
+<!--    transition: all  0.3s ease;-->
+<!--  }-->
+
+<!--  .color:hover {-->
+<!--    background-color: #FFFF66;-->
+<!--  }-->
+
+<!--  label {-->
+<!--    display: block;-->
+<!--  }-->
+<!--</style>-->
