--- a/app/views/public/users/favorites.js.erb
+++ b/app/views/public/users/favorites.js.erb
@@ -1,2 +1,2 @@
-$('#paginate-favorites').html("<%= escape_javascript(render 'public/users/user_groups', user_groups: @user_groups) %>");
+$('#paginate-user').html("<%= escape_javascript(render 'public/users/user_groups', user_groups: @user_groups) %>");
 $('#favorite-posts').html("<%= escape_javascript(render 'public/users/favorite_posts', posts: @favorite_posts) %>");
