--- a/app/views/public/users/index.js.erb
+++ b/app/views/public/users/index.js.erb
@@ -1,1 +1,1 @@
-$('#paginate-users').html("<%= escape_javascript(render 'public/users/user_groups', user_groups: @user_groups) %>");
+$('#paginate-user').html("<%= escape_javascript(render 'public/users/user_groups', user_groups: @user_groups) %>");
