--- a/app/views/public/groups/_search_index.html.erb
+++ b/app/views/public/groups/_search_index.html.erb
@@ -28,4 +28,4 @@
   </tbody>
 </table>
 
-<%= paginate groups, :param_name => 'groups_page' %>
+<!--<%#= paginate groups, :param_name => 'groups_page' %>-->
