--- a/app/views/public/groups/_form.html.erb
+++ b/app/views/public/groups/_form.html.erb
@@ -9,6 +9,12 @@
     <%= f.text_area :introduction, placeholder:"コミュニティ紹介をここに", class: 'form-control' %>
   </div>
 
+   <div class="form-group">
+    <!--:tag_nameはgroupに紐づいたタグモデルのnameという意味?-->
+    <%= f.label :tag_name, "タグ(半角スペースで複数タグ付けできます)" %> <i class="fa-solid fa-pen-clip"></i>
+    <%= f.text_field :tag_name, placeholder:"タグをここに", class: 'form-control' %>
+   </div>
+
   <div class="form-group">
     <%= f.label :コミュニティ画像 %>
     <%= f.file_field :image, class: 'form-control-file', accept: 'image/png,image/gif,image/jpeg' %>
