--- a/app/views/public/groups/tags.html.erb
+++ b/app/views/public/groups/tags.html.erb
@@ -6,12 +6,12 @@
     </div>
     <div class='col-md-8'>
       <h2 class="text-center">
-        コミュニティ一覧 <i class="fa-solid fa-people-group"></i>
+        コミュニティタグ一覧 <i class="fa-solid fa-hashtag"></i>
       </h2>
-      <h3 class="text-center"><%= link_to 'タグで探す', tags_path, class: 'class: btn btn-lg btn-outline-warning' %></h3>
-      <div id="index-ajax">
-        <%= render 'index', groups: @groups %>
-      </div>
+
+      <% @tags.each do |tag| %>
+        <span><%= link_to "#" + tag.name, search_path(content: tag.name, model: "tag", method: "perfect"), class: 'class: btn btn-lg btn-outline-warning' %></span>
+      <% end %>
     </div>
   </div>
 </div>
