--- a/app/views/public/notifications/index.html.erb
+++ b/app/views/public/notifications/index.html.erb
@@ -6,7 +6,7 @@
       <!--binding.pry-->
     <%= paginate notifications %>
   <% else %>
-    <p>通知はありません</p>
+    <p class="d-flex align-items-center justify-content-center">通知はありません</p>
   <% end %>
 
 <style>
