--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="form-group">
         <!--:genre_nameはpostに紐づいたジャンルモデルのnameという意味?-->
-        <%= f.label :genre_name, "投稿ジャンル(半角スペースで複数ジャンル付けできます)" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.label :genre_name, "ジャンル(半角スペースで複数ジャンル付けできます)" %> <i class="fa-solid fa-pen-clip"></i>
         <%= f.text_field :genre_name, placeholder:"ジャンルをここに", class: 'form-control' %>
       </div>
       <div class="form-group">
