--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -8,7 +8,7 @@
       <h2 class="text-center">
         コミュニティ一覧 <i class="fa-solid fa-people-group"></i>
       </h2>
-      <h3 class="text-center"><%= link_to 'タグで探す', tags_path, class: 'class: btn btn-lg btn-outline-warning' %></h3>
+      <h3 class="text-center"><%= link_to '#タグで探す', tags_path, class: 'class: btn btn-lg btn-outline-warning' %></h3>
       <div id="index-ajax">
         <%= render 'index', groups: @groups %>
       </div>
