--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,7 +36,7 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to 'コミュニティ一覧', groups_path, class: 'nav-link text-dark' %>
+          <%= link_to 'コミュニティ一覧', groups_path, class: 'nav-link text-dark',data: {"turbolinks"=>false} %>
         </li>
 
         <li class="nav-item">
