--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -32,7 +32,7 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to '投稿一覧', posts_path, class: 'nav-link text-dark' %>
+          <%= link_to '投稿一覧', posts_path, class: 'nav-link text-dark', data: {"turbolinks"=>false} %>
         </li>
 
         <li class="nav-item">
@@ -40,7 +40,7 @@
         </li>
 
         <li class="nav-item">
-          <%= link_to '会員一覧', users_path, class: 'nav-link text-dark' %>
+          <%= link_to '会員一覧', users_path, class: 'nav-link text-dark', data: {"turbolinks"=>false} %>
         </li>
 
         <li class="nav-item">
