--- a/app/views/admin/users/_info.html.erb
+++ b/app/views/admin/users/_info.html.erb
@@ -8,7 +8,7 @@
 	  <th><%= user.name %></th>
   </tr>
   <tr>
-	  <th>自己紹介</th>
+	  <th>意気込み</th>
 	  <th><%= user.introduction %></th>
   </tr>
   <tr>
