--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -31,7 +31,7 @@
             <div class="card-footer">
               <span><strong>投稿ジャンル: </strong></span>
               <% @post.genres.each do |genre| %>
-                <span><%= link_to genre.name, search_path(content: genre.name, model: "genre", method: "perfect") %> </span>
+                <span><%= link_to genre.name, search_path(content: genre.name, model: "genre", method: "perfect"), class: "btn btn-sm btn-outline-warning" %> </span>
                 <!--<li style="list-style: none;"><%#= genre.name %></li>-->
               <% end %>
             </div>
