--- a/app/views/public/searches/_genre_form.html.erb
+++ b/app/views/public/searches/_genre_form.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
   <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.text_field :content %>
+    <%= f.text_field :content, class: "rounded-pill" %>
     <%= f.hidden_field :model, :value => "genre" %>
     <%= f.hidden_field :method, :value => "partial" %>
     <%= f.submit '投稿ジャンル検索', class: "btn btn-sm btn-outline-warning" %>
