--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -16,9 +16,27 @@
         <div id="tab-contents">
           <div id="tab1" class="tab">
               <!--<h2><＃= @user.name %>さんの投稿</h2>-->
-            <div id="paginate-userposts">
-              <%= render 'public/posts/index',posts: @posts %>
-            </div>
+            <% if @posts.exists? %>
+              <div id="paginate-userposts">
+                <%= render 'public/posts/index',posts: @posts %>
+              </div>
+            <% else %>
+              <%# if @user.id = current_user.id %>
+                <div class="text-center" id="menu">
+                  <span class="font-weight-bold">投稿してみましょう!</span>
+                  <span class="mr-4">
+                    <span class="new-post-btn">
+                      <%= link_to new_post_path, class: 'btn btn-sm btn-outline-warning' do %>
+                        <i class="fa-solid fa-pen-to-square"></i>
+                      <% end %>
+                    </span>
+                    <p class="arrow_box">新規投稿</p>
+                  </span>
+                </div>
+              <%# else %>
+                <!--<span class="font-weight-bold">投稿はまだありません</span>-->
+              <%# end %>
+            <% end %>
           </div>
           <div id="tab2" class="tab">
               <div id="calendar">
