--- a/app/views/public/users/_info.html.erb
+++ b/app/views/public/users/_info.html.erb
@@ -96,7 +96,7 @@
   <label class="F" for="F">
     <h5 class="mt-3 text-center color">
       <%= @user.name %>さんの<br>参加中コミュニティ <i class="fa-solid fa-chevron-down"></i>
-      <p id="click" class="tooltip10 text-danger">クリックで表示/非表示します</p>
+      <p id="click" class="tooltip10 text-primary">クリックで表示/非表示します</p>
     </h5>
 
   </label>
